remove lazy loading

--- a/index.html
+++ b/index.html
@@ -243,60 +243,60 @@
             <div id="proj1" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/proyectos/bahria_grand_hotel/01.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/bahria_grand_hotel/02.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/bahria_grand_hotel/03.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/bahria_grand_hotel/02.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/bahria_grand_hotel/03.jpg" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
             <div id="proj2" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/proyectos/tinglado/01.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/02.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/03.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/04.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/tinglado/02.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/tinglado/03.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/tinglado/04.jpg" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
             <div id="proj3" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium01.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium02.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium03.jpg" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium04.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/stanley_condominium/stanley_condominium02.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/stanley_condominium/stanley_condominium03.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/stanley_condominium/stanley_condominium04.jpg" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
             <div id="proj4" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks04.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks02.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks03.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks04.png" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
             <div id="proj5" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/servicios/01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/04.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/05.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/06.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/07.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/02.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/03.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/04.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/05.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/06.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/07.png" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
             <div id="proj6" class="projs hide">
               <div class="img-slide fade">
                 <img class="imgs" loading="lazy" src="img/servicios/01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/04.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/05.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/06.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/07.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/08.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/02.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/03.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/04.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/05.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/06.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/07.png" alt="Sample_photo" />
+                <img class="imgs imgHide" src="img/servicios/08.png" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
@@ -338,7 +338,7 @@
 
 
 
-
+    
 
 
 
