--- a/biblioteca.html
+++ b/biblioteca.html
@@ -310,6 +310,17 @@
 
 
   <script>
+
+// darkMode
+  function darkMode(){
+    const getDark = document.querySelector('.dark-modei');
+    const darkMode = document.querySelector('body');
+    getDark.classList.toggle('bxs-sun');
+    darkMode.classList.toggle('darkMode');
+}
+
+
+
     // menu hide-visible in responsive
     const navMenu = document.querySelector('.nav');
     const padToggle = document.querySelector('.pad');
