--- a/index.html
+++ b/index.html
@@ -145,59 +145,59 @@
           <a href="https://cing1.github.io/pages/projects/modelado bahria gran hotel.html" target="_blank">Modelado estructural 'Bahria Gran Hotel'</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="Revit" />
+              <img src="public/images/icons/AutoCad.png" title="AutoCad" alt="AutoCad" />
             </div>
           </div>
         </div>
       </div>
 
       <div class="card-proj">
-        <a href="">
+        <a href="https://cing1.github.io/pages/projects/modelado de estructura metalica-tinglado deportivo.html">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/tinglado/01.jpg" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado de estructura metálica 'tinglado deportivo'</a>
+          <a href="https://cing1.github.io/pages/modelado de estructura metalica-tinglado deportivo.html">Modelado de estructura metálica 'tinglado deportivo'</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/AutoCad.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="Revit" />
             </div>
           </div>
         </div>
       </div>
 
       <div class="card-proj">
-        <a href="">
+        <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/stanley_condominium/stanley_condominium01.jpg" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado de edificio Stanley Condominium</a>
+          <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html">Modelado de edificio "Stanley Condominium"</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="Revit" />
             </div>
           </div>
         </div>
       </div>
 
       <div class="card-proj">
-        <a href="">
+        <a href="https://cing1.github.io/pages/modelado de puente.html">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado de puente en Autodesk Infraworks</a>
+          <a href="https://cing1.github.io/pages/modelado de puente.html">Modelado de puente en Autodesk Infraworks</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Infraworks.png" title="Infraworks" alt="Infraworks" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="Revit" />
+              <img src="public/images/icons/C3D.png" title="Civil 3D" alt="Civil 3D" />
             </div>
           </div>
         </div>
@@ -206,15 +206,15 @@
       <div class="card-proj">
         <a href="">
           <div class="image-cover">
-            <img loading="lazy" src="public/images/proyectos/diseno_geometrico/" alt="Sample photo" />
+            <img loading="lazy" src="public/images/proyectos/vivienda unifamiliar/01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
           <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado BIM de una vivienda unifamiliar</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="revit" />
+              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="AutoCad" />
             </div>
           </div>
         </div>
@@ -223,15 +223,15 @@
       <div class="card-proj">
         <a href="">
           <div class="image-cover">
-            <img loading="lazy" src="public/images/proyectos/bahria_grand_hotel/01.jpg" alt="Sample photo" />
+            <img loading="lazy" src="public/images/proyectos/edificio multifamiliar/01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado BIM de una vivienda multifamiliar</a>
+          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado BIM de un edificio multifamiliar</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
-              <img src="public/images/icons/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/autocad-lockup-610x66-removebg-preview.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Revit.png" title="Revit" alt="revit" />
+              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="AutoCad" />
             </div>
           </div>
         </div>
