--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="img/ico/icon.png" rel="icon" type="image/png">
   <title>CING | Blog</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/dark-mode.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/blog.css">
+  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="../public/css/dark-mode.css">
+  <link rel="stylesheet" href="../public/css/responsive.css">
+  <link rel="stylesheet" href="../public/css/blog.css">
   <link href="assets/boxicons.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <script src="js/main.js/"></script>
-  <script src="src/navbar.js"></script>
+  <script src="../src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -44,7 +44,7 @@
             <h2>Se muestra un video de modelado del puente Guozigou Bridge - China, utilizando programas de Autodesk</h2>
             <h3><i class='bx bxs-calendar-alt'></i>23 Enero, 2023</h3>
           </div>
-          <img src="blog/img/modelado-de-puente.webp" alt="Sample photo">
+          <img src="blogs/img/modelado-de-puente.webp" alt="Sample photo">
         </div>
         <div class="blog-card" id="08">
           <div class="blog-title">
@@ -54,23 +54,23 @@
               para el diseño de secciones de hormigón a flexión, corte, compresión, etc.</h2>
             <h3><i class='bx bxs-calendar-alt'></i>14 Enero, 2023</h3>
           </div>
-          <img src="blog/img/calculadora-acero.jpeg" alt="Sample photo">
+          <img src="blogs/img/calculadora-acero.jpeg" alt="Sample photo">
         </div>
         <div class="blog-card" id="08">
           <div class="blog-title">
-            <a href="blog/metodos-numericos-para-hp-prime2" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blogs/metodos-numericos-para-hp-prime2" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
-          <img src="blog/img/metodos2.jpeg" alt="Sample photo">
+          <img src="blogs/img/metodos-numericos-parte1.png" alt="Sample photo">
         </div>
         <div class="blog-card" id="07">
           <div class="blog-title">
-            <a href="blog/metodos-numericos-para-hp-prime1" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blogs/metodos-numericos-para-hp-prime1" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
-          <img src="blog/img/metodos1.jpeg" alt="Sample photo">
+          <img src="blogs/img/metodos-numericos-parte1.png" alt="Sample photo">
         </div>
         <div class="blog-card" id="06">
           <div class="blog-title">
