--- a/pages/projects/modelado bim vivienda unifamiliar.html
+++ b/pages/projects/modelado bim vivienda unifamiliar.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto| Modelado estructural bahria gran hotel</title>
+    <title>Proyecto| modelado estructural bahria gran hotel</title>
+
 </head>
 <body>
     <header>
-        <img src="../../public/images/logo.png" alt="Logo de la Empresa" class="logo">
+        <img src="img/logo.png" alt="Logo de la Empresa" class="logo">
         <div class="empresa">CING  Ingeniería</div>
         
     </header>
@@ -15,11 +16,11 @@
     <section class="galeria-container">
         <div class="galeria-titulo">Modelado estructural de 'Bahria Gran Hotel'</div>
         <div class="galeria-info">Fecha: 2 de marzo de 2021</div>
-        <div class="galeria-descripcion">Descripción: El modelado se realizó en Revit.</div>
+        <div class="galeria-descripcion">El modelado se realizó en Revit.</div>
         <div class="galeria">
-            <img src="../../public/images/proyectos/bahria_grand_hotel/01.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
-            <img src="../../public/images/proyectos/bahria_grand_hotel/02.jpg" loading="lazy" alt="Imagen 2" onclick="mostrarImagen(this)">
-            <img src="../../public/images/proyectos/bahria_grand_hotel/03.jpg" loading="lazy" alt="Imagen 3" onclick="mostrarImagen(this)">
+            <img src="img/proyectos/bahria_grand_hotel/01.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="img/proyectos/bahria_grand_hotel/02.jpg" loading="lazy" alt="Imagen 2" onclick="mostrarImagen(this)">
+            <img src="img/proyectos/bahria_grand_hotel/03.jpg" loading="lazy" alt="Imagen 3" onclick="mostrarImagen(this)">
         </div>
     </section>
 
