--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <img loading="lazy" src="public/images/servicios/07.jpg" alt="Sample photo" />
         </div>
         <div class="card-title">
-          <h3>Diseño arquitectónico</h3>
+          <h3>Diseños arquitectónicos</h3>
           <a href="#" class="btn">Más información</a>
         </div>
       </div>
