--- a/pages/portfolio/mario_cesgo_soliz.html
+++ b/pages/portfolio/mario_cesgo_soliz.html
@@ -76,7 +76,7 @@
             <div class="portada-container" data-aos="fade-in">
                 <h2>Hola, mi nombre es</h2>
                 <h1>Mario Cesgo Soliz</h1>
-                <h2>Desarrollador web y estudiante en Ingenieria Civil</h2>
+                <h2>Estudinte de Ingenieria Civil</h2>
             </div>
         </section>
         <!-- End Portada -->
@@ -172,45 +172,9 @@
                             <p><em>Universidad U.S.F.X.CH, Sucre, Bolivia</em></p>
                             <p>Actualmente estoy estoy estudiando Ingeniería Civil.</p>
                         </div>
-                        <!-- <h3 class="resume-title">Educación</h3>
-                        <div class="resume-item">
-                            <h4>Estudiente de Ingeniria Civil</h4>
-                            <h5>2019 - ...</h5>
-                            <p><em>Universidad U.S.F.X.CH, Sucre, Bolivia</em></p>
-                            <p>Actualmente estoy estoy estudiando Ingeniería Civil.</p>
-                        </div> -->
+
                     </div>
-                    <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                        <h3 class="resume-title">Experiencia Profesional</h3>
-                        <div class="resume-item">
-                            <h4>INGENIERO I+D</h4>
-                            <h5>2019 - Presente</h5>
-                            <p><em>ICUBE SL</em></p>
-                            <ul>
-                                <li>Técnico en investigación y desarrollo en técnicas de additive manufacturing.</li>
-                                <li>Colaboración con ArcelorMittal R&D.</li>
-                            </ul>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Prácticas</h4>
-                            <h5>2019</h5>
-                            <p><em>ArcelorMittal R&D Asturias</em></p>
-                            <ul>
-                                <li>Conocimiento profundo de las tecnologías DLT y en particular de Hyperledger Fabric.
-                                </li>
-                                <li>Experiencia desplegando una cadena de bloques (Blockchain) en un entorno industrial
-                                    real.
-                                </li>
-                                <li>Modificación y adaptación de los códigos fuente de Hyperledger Fabric para adaptarla
-                                    a las necesidades reales de un negocio.
-                                </li>
-                                <li>Definición y codificación de contratos inteligentes.</li>
-                                <li>Aplicación de métodos de visualización e interacción con una cadena de bloques para
-                                    diferentes usuarios, con diferentes permisos y visibilidad.
-                                </li>
-                            </ul>
-                        </div>
-                    </div> -->
+
                 </div>
 
             </div>
@@ -354,17 +318,6 @@
                         <h4 class="title"><a href="">Programación</a></h4>
                         <p class="description">Python, Html, css, Javascript, ppl, C#, Visual Basic</p>
                     </div>
-                    <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                        <div class="icon"><i class="icofont-shield-alt"></i></div>
-                        <h4 class="title"><a href="">Web Security</a></h4>
-                        <p class="description">Conocimientos en hardering de servidores y seguridad de apliaciones web.
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-                        <div class="icon"><i class="icofont-micro-chip"></i></div>
-                        <h4 class="title"><a href="">IoT</a></h4>
-                        <p class="description">Conocimientos en desarrollo de aplicaciones IoT utilizando herramientas como Arduino y sus sensores y Raspberri PI.</p>
-                    </div> -->
                 </div>
 
             </div>
