--- a/pages/projects/modelado de estructura metalica-tinglado deportivo.html
+++ b/pages/projects/modelado de estructura metalica-tinglado deportivo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo de la Empresa" class="logo">
+        <img src="../../public/images/logo.png" alt="Logo de la Empresa" class="logo">
         <div class="empresa">CING  Ingeniería</div>
         
     </header>
