--- a/pages/projects/modelado de puente.html
+++ b/pages/projects/modelado de puente.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto| modelado estructural bahria gran hotel</title>
+    <title>Proyecto| Modelado de puente en Autodesk Infraworks</title>
 
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo de la Empresa" class="logo">
+        <img src="../../public/images/logo.png" alt="Logo de la Empresa" class="logo">
         <div class="empresa">CING  Ingeniería</div>
         
     </header>
 
     <section class="galeria-container">
-        <div class="galeria-titulo">Modelado estructural de 'Bahria Gran Hotel'</div>
-        <div class="galeria-info">Fecha: 2 de marzo de 2021</div>
-        <div class="galeria-descripcion">El modelado se realizó en Revit.</div>
+        <div class="galeria-titulo">Modelado de puente en Autodesk Infraworks'</div>
+        <div class="galeria-info">Fecha: 17 de marzo de 2022</div>
+        <div class="galeria-descripcion">El modelado se realizó en Infraworks con componentes de Revit y Civil 3D</div>
         <div class="galeria">
-            <img src="img/proyectos/bahria_grand_hotel/01.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
-            <img src="img/proyectos/bahria_grand_hotel/02.jpg" loading="lazy" alt="Imagen 2" onclick="mostrarImagen(this)">
-            <img src="img/proyectos/bahria_grand_hotel/03.jpg" loading="lazy" alt="Imagen 3" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks02.png" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks03.png" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks04.png" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks05.png" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+
         </div>
     </section>
 
