--- a/pages/programas-hp-prime.html
+++ b/pages/programas-hp-prime.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="img/ico/icon.png" rel="icon" type="image/png">
     <title>CING | Programas HP-PRIME </title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/hp-prime.css">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/responsive.css">
+    <link rel="stylesheet" href="../public/css/hp-prime.css">
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <!-- <script src="js/main.js"></script> -->
     <script src="src/navbar.js"></script>
