--- a/pages/projects/modelado de edificio stanley condominium.html
+++ b/pages/projects/modelado de edificio stanley condominium.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo de la Empresa" class="logo">
+        <img src="../../public/images/logo.png" alt="Logo de la Empresa" class="logo">
         <div class="empresa">CING  Ingeniería</div>
         
     </header>
 
     <section class="galeria-container">
-        <div class="galeria-titulo">Modelado estructural de 'Bahria Gran Hotel'</div>
-        <div class="galeria-info">Fecha: 2 de marzo de 2021</div>
+        <div class="galeria-titulo">Modelado edificio 'Stanley Condominium'</div>
+        <div class="galeria-info">Fecha: 4 de noviembre de 2022</div>
         <div class="galeria-descripcion">El modelado se realizó en Revit.</div>
         <div class="galeria">
-            <img src="img/proyectos/bahria_grand_hotel/01.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
-            <img src="img/proyectos/bahria_grand_hotel/02.jpg" loading="lazy" alt="Imagen 2" onclick="mostrarImagen(this)">
-            <img src="img/proyectos/bahria_grand_hotel/03.jpg" loading="lazy" alt="Imagen 3" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/stanley_condominium/stanley_condominium01.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/stanley_condominium/stanley_condominium02.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/stanley_condominium/stanley_condominium03.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/stanley_condominium/stanley_condominium04.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
+            <img src="../../public/images/proyectos/stanley_condominium/stanley_condominium05.jpg" loading="lazy" alt="Imagen 1" onclick="mostrarImagen(this)">
         </div>
     </section>
 
