--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -17,7 +17,7 @@
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZZGM99SKG"></script>
   <script>
     window.dataLayer == window.dataLayer || [];
@@ -47,7 +47,7 @@
         <ul>
           <li>Obras Civiles</li>
           <li>Análisis y Diseño Estructural</li>
-          <li>Recursos</li>
+          <li>Recursos Académicos</li>
         </ul>
       </div>
     </div>
@@ -264,11 +264,8 @@
   <footer id="footer-info">
     <footer-copyrigth></footer-copyrigth>
   </footer>
-  <script>
 
-  </script>
-
-  <script src="js/main.js"></script>
+  <script src="public/js/main.js"></script>
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
 </body>
