--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../public/css/blog.css">
   <link href="assets/boxicons.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-  <script src="js/main.js/"></script>
+  <script src="../public/js/main.js/"></script>
   <script src="../src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
@@ -146,7 +146,7 @@
   <footer>
     <footer-copyrigth></footer-copyrigth>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="../public/js/main.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="src/navbar.js"></script>
 </body>
