--- a/index.html
+++ b/index.html
@@ -236,6 +236,24 @@
           </div>
         </div>
       </div>
+
+      <div class="card-proj">
+        <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html">
+          <div class="image-cover">
+            <img loading="lazy" src="public/images/proyectos/tramo doble via sucre-yamparaez/08.png" alt="Sample photo" />
+          </div>
+        </a>
+        <div class="card-proj-footer">
+          <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html">Diseño geométrico tramo Sucre-Yamparaez</a>
+          <div class="card-footer1">
+            <div class="tecnologias"> Software:
+              <img src="public/images/icons/C3D.png" title="Civil 3D" alt="Civil 3D" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
   <section id="contact">
