errores corregidos en directorios de paginas

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
       </div>
 
       <div class="card-proj">
-        <a href="https://cing1.github.io/pages/projects/modelado de estructura metalica-tinglado deportivo.html">
+        <a href="https://cing1.github.io/pages/projects/modelado de estructura metalica-tinglado deportivo.html" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/tinglado/01.jpg" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="https://cing1.github.io/pages/modelado de estructura metalica-tinglado deportivo.html">Modelado de estructura metálica 'tinglado deportivo'</a>
+          <a href="https://cing1.github.io/pages/modelado de estructura metalica-tinglado deportivo.html" target="_blank">Modelado de estructura metálica 'tinglado deportivo'</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/AutoCad.png" title="AutoCad" alt="AutoCad" />
@@ -170,13 +170,13 @@
       </div>
 
       <div class="card-proj">
-        <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html">
+        <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/stanley_condominium/stanley_condominium01.jpg" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html">Modelado de edificio "Stanley Condominium"</a>
+          <a href="https://cing1.github.io/pages/projects/modelado de edificio stanley condominium.html" target="_blank">Modelado de edificio "Stanley Condominium"</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/Revit.png" title="Revit" alt="Revit" />
@@ -186,13 +186,13 @@
       </div>
 
       <div class="card-proj">
-        <a href="https://cing1.github.io/pages/modelado de puente.html">
+        <a href="https://cing1.github.io/pages/projects/modelado de puente.html" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="https://cing1.github.io/pages/modelado de puente.html">Modelado de puente en Autodesk Infraworks</a>
+          <a href="https://cing1.github.io/pages/projects/modelado de puente.html" target="_blank">Modelado de puente en Autodesk Infraworks</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/Infraworks.png" title="Infraworks" alt="Infraworks" />
@@ -204,47 +204,47 @@
       </div>
 
       <div class="card-proj">
-        <a href="">
+        <a href="" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/vivienda unifamiliar/01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado BIM de una vivienda unifamiliar</a>
+          <a href="" target="_blank">Modelado BIM de una vivienda unifamiliar</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/Revit.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="Naviswork" />
             </div>
           </div>
         </div>
       </div>
 
       <div class="card-proj">
-        <a href="">
+        <a href="" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/edificio multifamiliar/01.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="Modelado estructural 'Bahria Gran Hotel'">Modelado BIM de un edificio multifamiliar</a>
+          <a href="" target="_blank">Modelado BIM de un edificio multifamiliar</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/Revit.png" title="Revit" alt="revit" />
-              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="AutoCad" />
+              <img src="public/images/icons/Naviswork.png" title="AutoCad" alt="Naviswork" />
             </div>
           </div>
         </div>
       </div>
 
       <div class="card-proj">
-        <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html">
+        <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html" target="_blank">
           <div class="image-cover">
             <img loading="lazy" src="public/images/proyectos/tramo doble via sucre-yamparaez/08.png" alt="Sample photo" />
           </div>
         </a>
         <div class="card-proj-footer">
-          <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html">Diseño geométrico tramo Sucre-Yamparaez</a>
+          <a href="https://cing1.github.io/pages/projects/diseño geometrico tramo sucre-yamparaez.html" target="_blank">Diseño geométrico tramo Sucre-Yamparaez</a>
           <div class="card-footer1">
             <div class="tecnologias"> Software:
               <img src="public/images/icons/C3D.png" title="Civil 3D" alt="Civil 3D" />
