--- a/pages/blog.html
+++ b/pages/blog.html
@@ -48,7 +48,7 @@
         </div>
         <div class="blog-card" id="08">
           <div class="blog-title">
-            <a href="blog/calculadora-secciones-acero" target="_blank"><i class='bx bxs-calculator'></i>Calculadora de
+            <a href="blogs/calculadora-secciones-acero.html" target="_blank"><i class='bx bxs-calculator'></i>Calculadora de
               secciones de acero de construcción</a>
             <h2>Programa para determinar la combinación de aceros necesaria para cubrir la sección de aceros requeridos
               para el diseño de secciones de hormigón a flexión, corte, compresión, etc.</h2>
@@ -58,7 +58,7 @@
         </div>
         <div class="blog-card" id="08">
           <div class="blog-title">
-            <a href="blogs/metodos-numericos-para-hp-prime2" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blogs/metodos-numericos-para-hp-prime2.html" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
