--- a/pages/blogs/metodos-numericos-para-hp-prime1.html
+++ b/pages/blogs/metodos-numericos-para-hp-prime1.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../img/ico/icon.png" rel="icon" type="image/png">
   <title>CING | Blogs</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/responsive.css">
-  <link rel="stylesheet" href="../css/blog.css">
-  <link rel="stylesheet" href="../css/blogs.css">
-  <link href="../assets/boxicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../public/css/style.css">
+  <link rel="stylesheet" href="../../public/css/responsive.css">
+  <link rel="stylesheet" href="../../public/css/blog.css">
+  <link rel="stylesheet" href="../../public/css/blogs.css">
+  <link href="../../assets/boxicons.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-  <script src="../js/main.js/"></script>
-  <script src="../src/navbar.js"></script>
-  <script src="../src/footer-copyrigth.js"></script>
+  <script src="../../public/js/main.js/"></script>
+  <script src="../../src/navbar.js"></script>
+  <script src="../../src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZZGM99SKG"></script>
