solucion de boton volver

--- a/pages/portfolio/proyecto.html
+++ b/pages/portfolio/proyecto.html
@@ -124,7 +124,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-button">⬅️ Volver al Portafolio</a>
+    <a href="portafolio_mario_cesgo.html" class="back-button">⬅️ Volver al Portafolio</a>
 
     <div class="gallery-container">
         <div class="gallery-header">
